Update index.html (sync GGn)

--- a/index.html
+++ b/index.html
@@ -315,29 +315,30 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr class="spacer"></tr>
 <tr><td colspan="3">FunFile (FF)<br>Awaiting someone to add.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">GazelleGames.net (GGn)<br>Invite forum unlocks with Pro Gamer user class. All user classes are gained with achievement points.<br>Additional invite forum unlocks with Legendary Gamer user class.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>AB</td><td>180&nbsp;days</td><td>Elite Gamer user class. 6 months account age.</td></tr>
+<tr><td colspan="3">GazelleGames.net (GGn)<br>User classes are gained with achievement points.<br>Invite forum unlocks with Pro Gamer+ user class (1200 points, 30 days account age). Additional invite forum unlocks with Legendary Gamer+ user class (3000 points, 90 days account age).<br><br>Elite Gamer+ user class: Awaiting someone to add.<br>Master Gamer+ user class: Awaiting someone to add.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>AB</td><td>180&nbsp;days</td><td>Elite Gamer+ user class.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>Aither</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>ANT</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>CCS</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>CGP</td><td>90&nbsp;days</td><td>1.0 real ratio. 3 months account age.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>BBT</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>BHD</td><td>730&nbsp;days</td><td>Master Gamer+ user class.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>CGP</td><td>91/182&nbsp;days</td><td>2TB upload, 1.0 (real) ratio, 6 months account ageor Elite Gamer+ user class: 2TB upload, 1.0 (real) ratio, 3 months account account age)
+	1.0 real ratio. 3 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>CRT</td><td>30&nbsp;days</td><td>1.0 ratio.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>DIC</td><td>30&nbsp;days</td><td>10 music uploads, or 15 other uploads.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>DIC</td><td>30&nbsp;days</td><td>10 music uploads or 15 other uploads.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>FF</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>iAnon</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>iAnon</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>LzTr</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>MAM</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>1.5 ratio. 6 months account age.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>MTV</td><td>182&nbsp;days</td><td>Elite Gamer+ user class, 1.5 ratio.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>NBL</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>OpenCD</td><td>180&nbsp;days</td><td>Elite Gamer user class. 6 months account age.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>OpenCD</td><td>182&nbsp;days</td><td>Elite Gamer+ user class.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>OPS</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>PB</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>PTer</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>PTN</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>Master Gamer user class. 1 year account age.<br>Thread is in the Legendary Gamer invite forum.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>Master Gamer+ user class.<br>Thread is in the Legendary Gamer+ invite forum.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>PxC</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>PxHD</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>PxHD</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>PTer</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>RED</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>SG</td><td>90&nbsp;days</td><td>90 days account age. Currently at user limit.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>SG</td><td>91&nbsp;days</td><td>Currently at user limit.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>UHDB</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">Great Poster Wall (GPW)<br>Invite forum unlocks with Power User user class: 200GB raw download, 1.2 ratio, 1 torrent uploaded, 2 weeks account age.<br><br>Elite user class: 500GB raw download, 1.2 ratio, 25 torrents uploaded, 4 weeks account age.</td></tr>
