Update index.html (sync HUNO, HDF, HDO, HDS, HDT)

--- a/index.html
+++ b/index.html
@@ -383,6 +383,17 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">GPW<span class="arrow">-&gt;</span>Wintersakura</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GPW<span class="arrow">-&gt;</span>Xinglin</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">Hawke-UNO (HUNO)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">HD-Forever (HDF)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">HD-Only (HDO)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">HD-Space (HDS)<br>Invite forum unlocks with HD Spacer+ user class: 100GB upload, 1.05 ratio.</td></tr>
+<tr><th scope="row">HDS<span class="arrow">-&gt;</span>Aither</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">HD-Torrents (HDT)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">HDBits (HDB)<br>Invite forum unlocks with 1080i user class and 1 year account age. 1080i user class: 30GB download, 0.95 ratio, 4 weeks account age.</td></tr>
 <tr><th scope="row">HDB<span class="arrow">-&gt;</span>AB</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">HDB<span class="arrow">-&gt;</span>Aither</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
