Update index.html (sync HDB, iAnon, IMT, iTS, IPT)

--- a/index.html
+++ b/index.html
@@ -394,10 +394,10 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr class="spacer"></tr>
 <tr><td colspan="3">HD-Torrents (HDT)<br>Awaiting someone to add.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">HDBits (HDB)<br>Invite forum unlocks with 1080i user class and 1 year account age. 1080i user class: 30GB download, 0.95 ratio, 4 weeks account age.</td></tr>
+<tr><td colspan="3">HDBits (HDB)<br>Invite forum unlocks with 1080i+ user class and 1 year account age. <br><br>1080i+ user class: 30GB download, 0.95 ratio, 4 weeks account age.</td></tr>
 <tr><th scope="row">HDB<span class="arrow">-&gt;</span>AB</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">HDB<span class="arrow">-&gt;</span>Aither</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">HDB<span class="arrow">-&gt;</span>ACM</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">HDB<span class="arrow">-&gt;</span>BHD</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">HDB<span class="arrow">-&gt;</span>BiB</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">HDB<span class="arrow">-&gt;</span>BLU</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">HDB<span class="arrow">-&gt;</span>D3</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
@@ -408,7 +408,15 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">HDB<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">HDB<span class="arrow">-&gt;</span>TTG</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr>
+<tr><td colspan="3">iAnon (IAN)<br>Invite forum unlocks with Power User+ user class and 1.0 ratio.<br><br>Power User+ user class: Awaiting someone to add.
+</td></tr>
+<tr><th scope="row">iAnon<span class="arrow">-&gt;</span>CRT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+	<tr class="spacer"></tr>
+<tr><td colspan="3">Immortal-S (IMT)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">inTheShadows (iTS)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">IPTorrents (IPT)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">KamePT (KamePT)<br>Invite forum unlocks with Power User user class: 50GB download, 1.05 ratio, 4 weeks account age, 40,000 seed points.</td></tr>
 <tr><th scope="row">KamePT<span class="arrow">-&gt;</span>MDU</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
