Update index.html (sync JPOP, JPTVclub, KG, LST, LzTR, Milkie)

--- a/index.html
+++ b/index.html
@@ -418,11 +418,35 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr class="spacer"></tr>
 <tr><td colspan="3">IPTorrents (IPT)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">KamePT (KamePT)<br>Invite forum unlocks with Power User user class: 50GB download, 1.05 ratio, 4 weeks account age, 40,000 seed points.</td></tr>
-<tr><th scope="row">KamePT<span class="arrow">-&gt;</span>MDU</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">KamePT<span class="arrow">-&gt;</span>RedLeaves</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
+<tr><td colspan="3">JPopSuki (JPop)<br>Awaiting someone to add.
+</td></tr>
+<tr><th scope="row">JPOP<span class="arrow">-&gt;</span>OPS</td><td>182&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">JPOP<span class="arrow">-&gt;</span>SM</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">JPOP<span class="arrow">-&gt;</span>U2</td><td>91&nbsp;days</td><td>"2 unlimited invite posts: One suspended, another active (requiring 3 months, ACG collection proofs)."</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
+<tr><td colspan="3">JPTV.club<br>Awaiting someone to add.
+</td></tr>
+<tr><th scope="row">JPTV.club<span class="arrow">-&gt;</span>ACM</td><td>91&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">KamePT (KamePT)<br>Invite forum unlocks with Power User+ user class: 50GB download, 1.05 ratio, 4 weeks account age, 40,000 seed points.</td></tr>
+<tr><th scope="row">KamePT<span class="arrow">-&gt;</span>MDU</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">KamePT<span class="arrow">-&gt;</span>RedLeaves</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">Karagarga (KG)<br>Awaiting someone to add.</td></tr>
+<tr><th scope="row">KG<span class="arrow">-&gt;</span>ACM</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">KG<span class="arrow">-&gt;</span>GGn</td><td>91&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">KG<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>Unwarned Power User+ user class account, 50 uploads (25 of which must be movies, or 10 completed subtitles pots).</td></tr>
+<tr><th scope="row">KG<span class="arrow">-&gt;</span>IMT</td><td>1&nbsp;days</td><td>3 other tracker profiles (with account age over 12 months).</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">LearnFlakes (LF)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User+ user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
+<tr><th scope="row">LzTr<span class="arrow">-&gt;</span>?</td><td>14&nbsp;days</td><td>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">LST<br>Awaiting someone to add.</td></tr>
+<tr><th scope="row">LST<span class="arrow">-&gt;</span>Aither</td><td>1&nbsp;days</td><td>Whale+ user class.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">Milkie<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">M-Team (M-T)<br>Invite forum unlocks with Elite User user class: 400GB download, 3.0 ratio, 8 weeks account age.</td></tr>
 <tr><th scope="row">M-T<span class="arrow">-&gt;</span>2xFree</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
