Update index.html (sync MAM)

--- a/index.html
+++ b/index.html
@@ -463,27 +463,27 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">M-T<span class="arrow">-&gt;</span>LeagueHD</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">M-T<span class="arrow">-&gt;</span>THD</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">MyAnonaMouse (MAM)<br>Invite forum unlocks with Power User user class: 25GB upload, 2.0 ratio, 4 weeks account age.<br>Some threads additionally require VIP, purchased with bonus points.</td></tr>
+<tr><td colspan="3">MyAnonaMouse (MAM)<br>Invite forum unlocks with Power User+ user class: 25GB upload, 2.0 ratio, 4 weeks account age.<br>Some threads require VIP, purchased with bonus points.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>ABT</td><td>28&nbsp;days</td><td>Other tracker profiles.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>Aither</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>BdC</td><td>60&nbsp;days</td><td>2 months account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>BHDTV</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>BtW</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>CGP</td><td>180&nbsp;days</td><td>500GB upload and 1 year account age, or 1TB upload and 6 months account age.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>BBT</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>Aither</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>BHDTV</td><td>182&nbsp;days</td><td>1.0 ratio.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>CGP</td><td>182/365&nbsp;days</td><td>Power User+ user class: 12 months account age, 2.0 ratio, 500GB upload, or VIP+ user class: 6 months account age, 1.0 ratio, 1TB upload.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>DCC</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>1.5 real ratio. 1 year account age.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>1.5 (real) ratio.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>IMT</td><td>28&nbsp;days</td><td>3 other tracker profiles (with account age over 12 months).</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>Milkie</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>MiM</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>OBS</td><td>90&nbsp;days</td><td>100GB upload. 3 months account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>OPS</td><td>730&nbsp;days</td><td>2 years account age.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>OTW</td><td>28&nbsp;days</td><td>500GB upload, 1TB download, 1.25 ratio, 6 months account age (on MAM or other tracker)</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>OE</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>OPS</td><td>730&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>PxC</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>PxHD</td><td>180&nbsp;days</td><td>2 other tracker profiles. 6 months account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>SC</td><td>180&nbsp;days</td><td>50GB upload. 6 months account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>Shazbat</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>SM</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>TG</td><td>28&nbsp;days</td><td>2 or 3 other tracker profiles.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>TSP</td><td>60&nbsp;days</td><td>2.0 ratio. 2 months account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>Xspeeds</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>PxHD</td><td>182&nbsp;days</td><td>High-level Power User+ user class, or Elite+ user class, 2 other tracker profiles (with account age over 6 months).</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>SC</td><td>182&nbsp;days</td><td>VIP+ user class, 50GB upload.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>Shazbat</td><td>182&nbsp;days</td><td>VIP+ user class.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>TBDev</td><td>28&nbsp;days</td><td>4 other tracker profiles.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>TE</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>TG</td><td>28&nbsp;days</td><td>1 or 2 other tracker profiles.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>XS</td><td>182&nbsp;days</td><td>VIP+ user class, 1.0 ratio.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">MoreThanTV (MTV)<br>Invite forum unlocks with Camera Operator user class: 500GB upload, 8 weeks account age.<br><br>Boom Operator user class: 1000GB upload, 10 checked uploads, 5 forum posts.<br>Engineer user class: 3000GB upload, 500 checked uploads, 25 forum posts, 48 weeks account age.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>Aither</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
