Update index.html (sync MTV)

--- a/index.html
+++ b/index.html
@@ -485,17 +485,18 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>TG</td><td>28&nbsp;days</td><td>1 or 2 other tracker profiles.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>XS</td><td>182&nbsp;days</td><td>VIP+ user class, 1.0 ratio.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">MoreThanTV (MTV)<br>Invite forum unlocks with Camera Operator user class: 500GB upload, 8 weeks account age.<br><br>Boom Operator user class: 1000GB upload, 10 checked uploads, 5 forum posts.<br>Engineer user class: 3000GB upload, 500 checked uploads, 25 forum posts, 48 weeks account age.</td></tr>
-<tr><th scope="row">MTV<span class="arrow">-&gt;</span>Aither</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">MTV<span class="arrow">-&gt;</span>BLU</td><td>90&nbsp;days</td><td>1.0 real ratio. 3 months account age.</td></tr>
-<tr><th scope="row">MTV<span class="arrow">-&gt;</span>CGP</td><td>90&nbsp;days</td><td>1.0 real ratio. 3 months account age.</td></tr>
-<tr><th scope="row">MTV<span class="arrow">-&gt;</span>CHD</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">MTV<span class="arrow">-&gt;</span>Emp</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
-<tr><th scope="row">MTV<span class="arrow">-&gt;</span>OPS</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">MTV<span class="arrow">-&gt;</span>PTN</td><td>56&nbsp;days</td><td>Other tracker profiles.</td></tr>
+<tr><td colspan="3">MoreThanTV (MTV)<br>Invite forum unlocks with Camera Operator+ user class: 500GB upload, 8 weeks account age.<br><br>Boom Operator+ user class: 1TB upload, 10 checked uploads, 5 forum posts.<br>Engineer+ user class: 3TB upload, 500 checked uploads, 25 forum posts, 48 weeks account age.</td></tr>
+<tr><th scope="row">MTV<span class="arrow">-&gt;</span>Aither</td><td>121&nbsp;days</td><td>1.0 ratio.</td></tr>
+<tr><th scope="row">MTV<span class="arrow">-&gt;</span>BLU</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">MTV<span class="arrow">-&gt;</span>CRT</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">MTV<span class="arrow">-&gt;</span>CGP</td><td>91&nbsp;days</td><td>2TB upload, 1.0 ratio.</td></tr>
+<tr><th scope="row">MTV<span class="arrow">-&gt;</span>FF</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">MTV<span class="arrow">-&gt;</span>IMT</td><td>56&nbsp;days</td><td>3 other tracker profiles (with account age over 12 months).</td></tr>
+<tr><th scope="row">MTV<span class="arrow">-&gt;</span>OPS</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">MTV<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>Engineer+ user class.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>PxC</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">MTV<span class="arrow">-&gt;</span>PB</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
-<tr><th scope="row">MTV<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>Engineer user class. 2 years account age.</td></tr>
+<tr><th scope="row">MTV<span class="arrow">-&gt;</span>PB</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">MTV<span class="arrow">-&gt;</span>Portugas</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>THD</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>UHDB</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
