--- a/index.html
+++ b/index.html
@@ -500,6 +500,10 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>THD</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MTV<span class="arrow">-&gt;</span>UHDB</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">MySpleen (MS)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">nCore<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">Nebulance (NBL)<br>Invite forum unlocks with Ensign user class: 100GB upload, 100 snatches, 100000 Cubits, 4 weeks account age.<br><br>Flattop user class: 250GB upload, 250 snatches, 500000 Cubits, 8 weeks account age.</td></tr>
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>Aither</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>ANT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
