--- a/index.html
+++ b/index.html
@@ -504,16 +504,16 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr class="spacer"></tr>
 <tr><td colspan="3">nCore<br>Awaiting someone to add.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">Nebulance (NBL)<br>Invite forum unlocks with Ensign user class: 100GB upload, 100 snatches, 100000 Cubits, 4 weeks account age.<br><br>Flattop user class: 250GB upload, 250 snatches, 500000 Cubits, 8 weeks account age.</td></tr>
+<tr><td colspan="3">Nebulance (NBL)<br>Invite forum unlocks with Ensign+ user class: 100GB upload, 100 snatches, 100K Cubits, 4 weeks account age.<br><br>Flattop+ user class: 250GB upload, 250 snatches, 500K Cubits, 8 weeks account age.<br>Raptor+ user class: 1TB upload, 1000 snatches, 850K Cubits, 32 weeks account age.</td></tr>
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>Aither</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>ANT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>BBT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">NBL<span class="arrow">-&gt;</span>BLU</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">NBL<span class="arrow">-&gt;</span>CRT</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">NBL<span class="arrow">-&gt;</span>GPW</td><td>56&nbsp;days</td><td>Flattop user class.</td></tr>
-<tr><th scope="row">NBL<span class="arrow">-&gt;</span>PxC</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">NBL<span class="arrow">-&gt;</span>BLU</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">NBL<span class="arrow">-&gt;</span>CRT</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">NBL<span class="arrow">-&gt;</span>GPW</td><td>56&nbsp;days</td><td>Flattop+ user class.</td></tr>
+<tr><th scope="row">NBL<span class="arrow">-&gt;</span>OPS</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">NBL<span class="arrow">-&gt;</span>PHD</td><td>224&nbsp;days</td><td>Raptor+ user class.</td></tr>
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>RFX</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">NBL<span class="arrow">-&gt;</span>SM</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">OurBits (OB)<br>Invite forum unlocks with Elite User user class: 350GB download, 2.5 ratio, 10 weeks account age.</td></tr>
 <tr><th scope="row">OB<span class="arrow">-&gt;</span>BeiTai</td><td>70&nbsp;days</td><td>No additional requirements.</td></tr>
