Update index.html (sync OTW, OE)

--- a/index.html
+++ b/index.html
@@ -515,6 +515,10 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>PHD</td><td>224&nbsp;days</td><td>Raptor+ user class.</td></tr>
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>RFX</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">OldToons World (OTW)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">OnlyEncodes+ (OE)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">OurBits (OB)<br>Invite forum unlocks with Elite User user class: 350GB download, 2.5 ratio, 10 weeks account age.</td></tr>
 <tr><th scope="row">OB<span class="arrow">-&gt;</span>BeiTai</td><td>70&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">OB<span class="arrow">-&gt;</span>GPW</td><td>70&nbsp;days</td><td>No additional requirements.</td></tr>
