--- a/index.html
+++ b/index.html
@@ -541,16 +541,19 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">OpenCD<span class="arrow">-&gt;</span>PTer</td><td>180&nbsp;days</td><td>200GB download. 2.5 ratio. 6 months account age.</td></tr>
 <tr><th scope="row">OpenCD<span class="arrow">-&gt;</span>U2</td><td>175&nbsp;days</td><td>600GB download. 3.5 ratio. 25 weeks account age.<br>Unofficial invite thread.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">Orpheus (OPS)<br>Invite forum unlocks with Elite user class: 100GB upload, 1.05 ratio, 50 torrents uploaded, 4 weeks account age.</td></tr>
+<tr><td colspan="3">Orpheus (OPS)<br>Invite forum unlocks with Elite+ user class: 100GB upload, 1.05 ratio, 50 torrents uploaded, 4 weeks account age.<br><br>Torrent Master+ user class: 500GB upload, 1.05 ratio, 500 torrents uploaded, 8 weeks account age.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>ANT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">OPS<span class="arrow">-&gt;</span>CCS</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">OPS<span class="arrow">-&gt;</span>GGn</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">OPS<span class="arrow">-&gt;</span>LzTr</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
-<tr><th scope="row">OPS<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>1.5 ratio. 6 months account age.</td></tr>
+<tr><th scope="row">OPS<span class="arrow">-&gt;</span>Aither</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">OPS<span class="arrow">-&gt;</span>CRT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">OPS<span class="arrow">-&gt;</span>CCT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">OPS<span class="arrow">-&gt;</span>GGn</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">OPS<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">OPS<span class="arrow">-&gt;</span>LzTr</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">OPS<span class="arrow">-&gt;</span>MTV</td><td>182&nbsp;days</td><td>1.5 ratio.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>NBL</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>OpenCD</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">OPS<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>Torrent Master user class. 2 years account age.</td></tr>
-<tr><th scope="row">OPS<span class="arrow">-&gt;</span>RED</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
+<tr><th scope="row">OPS<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>Torrent Master+ user class.</td></tr>
+<tr><th scope="row">OPS<span class="arrow">-&gt;</span>RED</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>SM</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>UHDB</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
