Update index.html (sync PTP)

--- a/index.html
+++ b/index.html
@@ -598,41 +598,46 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">PTer<span class="arrow">-&gt;</span>UHDB</td><td>35&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">PTer<span class="arrow">-&gt;</span>Xinglin</td><td>35&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">PassThePopcorn (PTP)<br>No requirement data yet.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>AB</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>AR</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BdC</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><td colspan="3">PassThePopcorn (PTP)<br>Awaiting someone to add.<br><br>Power User+ user class: Awaiting someone to add.<br>Torrent Master+ user class: Awaiting someone to add.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>Aither</td><td>30&nbsp;days</td><td>Power user+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>AB</td><td>91&nbsp;days</td><td>Power user+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>AR</td><td>91&nbsp;days</td><td>Power user+ user class, 1.0 ratio.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>Animaga [Usenet]</td><td>30&nbsp;days</td><td>Power user+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>ANT</td><td>30&nbsp;days</td><td>Power user+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BBT</td><td>182&nbsp;days</td><td>Power user+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BHD</td><td>30&nbsp;days</td><td>Torrent Master+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BdC</td><td>60&nbsp;days</td><td>Power user+ user class.</td></tr>
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>BiB</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BLU</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BTN</td><td>365&nbsp;days</td><td>Torrent Master user class. 1 year account age.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>CCS</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>CH</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>D3</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>DIC</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>Emp</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>FF</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>GGn</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>GPW</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>HDB</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>HDT</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BLU</td><td>30&nbsp;days</td><td>Power user+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BHDTV</td><td>30&nbsp;days</td><td>Power user+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>BTN</td><td>365&nbsp;days</td><td>Torrent Master+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>CCS</td><td>30&nbsp;days</td><td>Power user+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>Canal Street</td><td>182&nbsp;days</td><td>Power user+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>CCC</td><td>30&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>D3</td><td>547&nbsp;days</td><td>Power User+ user class, 1.5TB upload, 100 uploads.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>DIC</td><td>30&nbsp;days</td><td>Power User+ user class, 5 uploads.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>EMP</td><td>182&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>FF</td><td>30&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>GGn</td><td>91&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>GPW</td><td>91&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>HDF</td><td>182&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>HDO</td><td>365&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>HDSky</td><td>30&nbsp;days</td><td>Power User+ user class.</td></tr>
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>HDSky</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>LzTr</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>MAM</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>MTV</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>NBL</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>OPS</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>PTN</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>PxC</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>PxHD</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>RED</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>SC</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>SceneHD</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>SM</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>TG</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>THC</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>TLFB</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>TTech</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">PTP<span class="arrow">-&gt;</span>UHDB</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>Power User+ user class, 1.05 ratio.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>IMT</td><td>30&nbsp;days</td><td>Power User+ user class, other tracker profiles.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>LzTr</td><td>91&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>MAM</td><td>30&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>NBL</td><td>30&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>OPS</td><td>30&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>PxC</td><td>30&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>RED</td><td>30&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>SHD</td><td>365&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>SC</td><td>182&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>TG</td><td>30&nbsp;days</td><td>Power User+ user class, other tracker profiles.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>TE</td><td>30&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>TLFB</td><td>91&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">PTP<span class="arrow">-&gt;</span>UHDB</td><td>30&nbsp;days</td><td>Power User+ user class.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">Redacted (RED)<br>Invite forum unlocks with Power User user class: 25GB upload, 0.65 ratio, 5 torrents uploaded, 2 weeks account age.<br><br>Elite user class: 100GB upload, 0.65 ratio, 50 torrents uploaded, 4 weeks account age.<br>Torrent Master user class: 500GB upload, 0.65 ratio, 500 torrents uploaded, 8 weeks account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>AB</td><td>180&nbsp;days</td><td>Power User user class + 1 year account age, or Elite user class + 6 months account age.</td></tr>
