Update index.html (sync PTN, PxC, PxHD, PB, PTM, PHD)

--- a/index.html
+++ b/index.html
@@ -639,6 +639,23 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>TLFB</td><td>91&nbsp;days</td><td>Power User+ user class.</td></tr>
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>UHDB</td><td>30&nbsp;days</td><td>Power User+ user class.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">PirateTheNet (PTN)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">PixelCove (PxC)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">PixelHD (PxHD)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">PornBay (PB)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">PreToMe (PTM)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">PrivateHD (PHD)<br>Self-invite unlocks at 300GB upload, 2.0 ratio, seeding 5 torrents, no Hit & Runs, 4 months account age (or V.I.P.), and costs 10,000 BP per invite with a 1 month cool-down.</td></tr>
+<tr><th scope="row">PHD<span class="arrow">-&gt;</span>AZ</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PHD<span class="arrow">-&gt;</span>CZ</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">PHD<span class="arrow">-&gt;</span>EZ</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">PTFiles (PTF)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">Redacted (RED)<br>Invite forum unlocks with Power User user class: 25GB upload, 0.65 ratio, 5 torrents uploaded, 2 weeks account age.<br><br>Elite user class: 100GB upload, 0.65 ratio, 50 torrents uploaded, 4 weeks account age.<br>Torrent Master user class: 500GB upload, 0.65 ratio, 500 torrents uploaded, 8 weeks account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>AB</td><td>180&nbsp;days</td><td>Power User user class + 1 year account age, or Elite user class + 6 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>Aither</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
